--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ const items = locale === 'es' ? NAVITEMS.es : NAVITEMS.en
 
 <header class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2">
     
-    <nav class="flex px-3 text-sm font-medium rounded-full text-gray-200 justify-center items-center">
+    <nav class="flex px-3 text-sm font-medium rounded-full text-gray-200 justify-center items-center bg-gray-800/90">
         {
             items.map((link) => (
               <a
@@ -29,64 +29,52 @@ const items = locale === 'es' ? NAVITEMS.es : NAVITEMS.en
 </header>
 
 <script>
-    document.addEventListener("astro:page-load", () => {
-      const sections = document.querySelectorAll("section")
-      const navItems = document.querySelectorAll("header nav a")
-  
-      const callback = (entries: any[]) => {
-        entries.forEach((entry) => {
-          if (entry.isIntersecting) {
-            navItems.forEach((item) => {
-              if (item.getAttribute("aria-label") == entry.target.id) {
-                item.classList.add("text-blue-500")
-              } else {
-                item.classList.remove("text-blue-500")
-              }
-            })
-          }
-        })
-      }
-  
-      const observer = new IntersectionObserver(callback, {
-        root: null,
-        rootMargin: "0px",
-        threshold: 0.3,
-      })
-  
-      sections.forEach((section) => {
-        observer.observe(section)
-      })
-  
-      // Cleanup function
-      document.onvisibilitychange = () => {
-        if (document.visibilityState === "hidden") {
-          observer.disconnect()
-        } else {
-          sections.forEach((section) => {
-            observer.observe(section)
-          })
+  // Ensure the script runs after the DOM content is fully loaded
+  document.addEventListener('DOMContentLoaded', function () {
+    console.log("HAY DOM")
+    const navItems = document.querySelectorAll('nav a');
+    const sections = Array.from(navItems).map((item: any) => {
+      const id = item.getAttribute('aria-label');
+      return document.getElementById(id);
+    });
+
+    const observerOptions = {
+      root: null,
+      rootMargin: '0px',
+      threshold: 0.15
+    };
+
+    const observerCallback = (entries: any[]) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          navItems.forEach((navItem) => {
+            console.log(entry.target.id)
+            if (navItem.getAttribute('aria-label') === entry.target.id) {
+              navItem.classList.add('hovered');
+            } else {
+              navItem.classList.remove('hovered');
+            }
+          });
         }
-      }
-    })
-  </script>
+      });
+    };
+
+    const observer = new IntersectionObserver(observerCallback, observerOptions);
+
+    sections.forEach(section => {
+      if (section) observer.observe(section);
+    });
+  });
+</script>
   
-  <style>
-    nav {
-      animation: nav-shadown 1s linear both;
-      animation-timeline: scroll();
-      animation-range: 0 100px;
-    }
-  
-    nav {
-      @apply dark:bg-gray-800/90 bg-white/50;
-    }
-  
-    @keyframes nav-shadown {
-      0% {
-        @apply dark:bg-gray-800/0 bg-white/0;
-      }
-      to {
-        @apply shadow-lg ring-1 backdrop-blur ring-white/10;
-      }
-    }
-  </style>
+<style>
+  nav { 
+    animation: nav-shadown 1s linear both;
+    animation-timeline: scroll();
+    animation-range: 0 100px;
+  }
+
+  .hovered {
+    color: #3b82f6; 
+  }
+</style>
