--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -26,7 +26,7 @@ const extraClassForSections = 'py-8 gap-top-4'
 
 <main class="px-12">
 
-    <SectionContainer extraClass="py-24 gap-y-4">
+    <SectionContainer id="home" extraClass="py-24 gap-y-4">
         <Presentation locale={locale} />
     </SectionContainer>
 
