Making titles and subtitles to be white

--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -36,11 +36,11 @@ const socialPillsClass = 'size-4 md:size-5 lg:size-6'
     </a>
 </div>
 
-<h1 class="text-3xl font-bold md:text-4xl lg:text-5xl py-4"> 
+<h1 class="text-3xl font-bold md:text-4xl lg:text-5xl py-4 text-white"> 
     {texts.title} 
 </h1>
 
-<h2 class="flex flex-wrap text-xl md:text-2xl lg:text-3xl">
+<h2 class="flex flex-wrap text-xl md:text-2xl lg:text-3xl text-white">
     
     <span class="opacity-80 pr-2">{texts.subtitle.student_in}</span> 
     <span class="text-yellow-100">{texts.subtitle.degree}</span>
