--- a/src/components/TitleSection.astro
+++ b/src/components/TitleSection.astro
@@ -1,6 +1,6 @@
 ---
 // dark:text-white text-black/80
 ---
-<h2 class={`flex items-center pb-6 text-3xl font-semibold gap-x-3 ${Astro.props.className}`}>
+<h2 class={`flex items-center pb-6 text-3xl font-semibold gap-x-3 text-white ${Astro.props.className}`}>
     <slot />
 </h2>
