--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import '@fontsource-variable/onest';
 
@@ -25,6 +26,7 @@ const { title, description, locale } = Astro.props;
 		
 		<Header locale={locale}/>
 		<slot />
+		<Footer locale={locale}/>
 
 		<div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
 	</body>
