--- a/src/components/Presentation.astro
+++ b/src/components/Presentation.astro
@@ -56,7 +56,7 @@ const socialPillsClass = 'size-4 md:size-5 lg:size-6'
 
 <ul class="flex flex-wrap gap-2">
     <li> 
-        <SocialPill>
+        <SocialPill href="mailto://truebanosergio@gmail.com">
             <EmailIcon class={socialPillsClass} />
             {texts.badges.email}
         </SocialPill>
